# slugify-x

./: README.md  pyproject.toml
src/slugify_x/: __init__.py  core.py
tests/: test_slugify.py
