[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slugify-x"
version = "0.1.0"
description = "Unicode-aware URL slug generator."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nripanka Das", email = "nripankadas@gmail.com" }]
keywords = ["slug", "url", "unicode", "text", "utility"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/nripankadas07/slugify-x"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
